fix: missing votes_count
