# docs/swagger.json
@@ -708,23 +708,6 @@
                 }
             }
         },
-        "models.OptionsResponse": {
-            "type": "object",
-            "properties": {
-                "avatar": {
-                    "type": "string"
-                },
-                "desc": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "models.PollsResponse": {
             "type": "object",
             "properties": {
@@ -769,7 +752,7 @@
                 "options": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.OptionsResponse"
+                        "$ref": "#/definitions/models.CreateOptionsResponse"
                     }
                 },
                 "start_date": {
